--- a/css/styles.css
+++ b/css/styles.css
@@ -238,14 +238,13 @@ header h1 {
 }
 
 
-
-a {
-    
-   padding: 0px;
-   margin:0px;
-   border:none;
-   
-    
+.main-link::before {
+    content: " ";
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;  
 }
 
 
